tests/paczka2/big_fuzzy/45418144.err
Error in line 8: KIiZ31k A398 25,2
Error in line 9: KIiZ31k A26 40,9
Error in line 33: rkaJJDH1 A54 13,4
Error in line 41: WMAmGAxI3q A54 0,2
Error in line 47: rkaJJDH1 A398 -1,9
Error in line 64: k7HleeY A26 99,8
Error in line 54: WMAmGAxI3q A398 72,1
Error in line 63: KIiZ31k A54 77,4
Error in line 65: k7HleeY A398 54,3
Error in line 72: KIiZ31k A26 14,8
Error in line 91: WMAmGAxI3q A26 145,0
Error in line 96: WMAmGAxI3q A54 88,9
Error in line 104: k7HleeY A54 67,31
Error in line 105: KIiZ31k A26 25,04
Error in line 106: k7HleeY A26 59,1
Error in line 113: rkaJJDH1 A54 62,5
Error in line 114: rkaJJDH1 A398 81,8
Error in line 122: A398 A398 41,3
Error in line 118: rkaJJDH1 A54 29,8
Error in line 128: rkaJJDH1 A398 16,3
Error in line 139: rkaJJDH1 A398 87,3
Error in line 146: 4aI A54 90,2
Error in line 121: Lhh5wPC A54 50,3
Error in line 142: WMAmGAxI3q A54 22,2
Error in line 173: A398 A26 70,9
Error in line 176: Lhh5wPC A26 29,26
Error in line 169: KIiZ31k A54 56,9
Error in line 174: A398 A398 90,9
Error in line 182: A398 A26 18,5
Error in line 184: WMAmGAxI3q A398 22,1
Error in line 188: WMAmGAxI3q A54 12,5
Error in line 185: KIiZ31k A26 263,8
Error in line 178: Lhh5wPC A26 35,5
Error in line 195: KIiZ31k A398 25,8
Error in line 201: k7HleeY A398 47,0
Error in line 205: k7HleeY A54 92,4
Error in line 210: Lhh5wPC A54 118,4
Error in line 209: k7HleeY A26 53,7
Error in line 225: Lhh5wPC A398 -1,8
Error in line 211: Lhh5wPC A398 7,7
Error in line 231: Lhh5wPC A26 13,0
Error in line 237: rkaJJDH1 A54 32,4
Error in line 235: k7HleeY A398 408,0
Error in line 247: rkaJJDH1 A26 -2,5
